update for gitpages

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body{
     letter-spacing: 0.5px;
     font-family: "Gilroy-Medium";
     font-size: 20px;
-    background: #ffffff;
+    background: #FFFEF5;
     padding: 10px;
     border-radius: 6px;
     transition: background 1s;
