--- a/src/html/Factors/style.css
+++ b/src/html/Factors/style.css
@@ -1,29 +1,29 @@
 .clover {
-  position: absolute; /* позволяет располагать клеверы по всей странице */
+  position: absolute;
   width: 100px;
   height: 100px;
-  background-image: url('img/clover.png'); /* добавляем изображение клевера */
-  background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
+  background-image: url('img/clover.png');
+  background-size: cover;
   top: 15%;
   left: 80%;
 }
 .clover2 {
-  position: absolute; /* позволяет располагать клеверы по всей странице */
+  position: absolute;
   width: 200px;
   height: 200px;
-  background-image: url('img/clover2.png'); /* добавляем изображение клевера */
-  background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
+  background-image: url('img/clover2.png');
+  background-size: cover;
   top: 25%;
   left: 10%;
 }
 .clover3 {
-  position: fixed; /* позволяет фиксировать позицию элемента относительно окна просмотра */
+  position: fixed;
   width: 400px;
   height: 400px;
-  background-image: url('img/clover3.png'); /* добавляем изображение клевера */
-  background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
-  bottom: 0; /* прижимаем к нижнему краю */
-  right: 0; /* прижимаем к правому краю */
+  background-image: url('img/clover3.png');
+  background-size: cover;
+  bottom: 0;
+  right: 0;
 }
 
 @media (min-width: 560px) and (max-width: 919px) {
@@ -35,13 +35,10 @@
   }
   .clover3 {
     position: fixed;
-    width: 0;
     width: 150px;
-    height: 150px; /* позволяет фиксировать позицию элемента относительно окна просмотра */
-
-    background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
-    bottom: 0; /* прижимаем к нижнему краю */
-    right: 0; /* прижимаем к правому краю */
+    height: 150px;
+    bottom: 0;
+    right: 0;
   }
 }
 
@@ -80,10 +77,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  white-space: nowrap;
-  flex-direction: column;
 }
-
+.svg-block__modification {
+  display: flex;
+  position: relative;
+}
 .person-svg {
   max-width: 820px;
   max-height: 1100px;
@@ -103,31 +101,28 @@
     font-size: 1em;
   }
   .clover {
-    position: absolute; /* позволяет располагать клеверы по всей странице */
-    width: 150px; /* задаем размер клевера */
+    position: absolute;
+    width: 150px;
     height: 150px;
 
-    background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
     top: 15%;
-    left: 70%;
+    left: 53%;
     z-index: 1;
   }
   .clover2 {
-    position: absolute; /* позволяет располагать клеверы по всей странице */
-    width: 0; /* задаем размер клевера */
+    position: absolute;
+    width: 0;
     height: 0;
 
-    background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
     top: 25%;
     left: 10%;
   }
   .clover3 {
     position: fixed;
-    width: 0; /* позволяет фиксировать позицию элемента относительно окна просмотра */
+    width: 0;
 
-    background-size: cover; /* масштабирует изображение, чтобы оно заполнило всю площадь элемента */ /* задаем размытие клевера */
-    bottom: 0; /* прижимаем к нижнему краю */
-    right: 0; /* прижимаем к правому краю */
+    bottom: 0;
+    right: 0;
   }
 }
 .block-text__link {
@@ -136,4 +131,207 @@
 }
 .block-text__list {
   grid-area: 2 / 2 / auto / auto;
+}
+
+/* Modal */
+.modal {
+  display: none;
+  z-index: 9999;
+  margin: 20% auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-content {
+  margin: 40% auto;
+  padding: 20px;
+  max-width: 600px;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+.content {
+  font-size: 20px;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+@media (max-width: 380px) {
+  .svg-block-title {
+    display: none;
+    position: absolute;
+    top: 48% !important;
+    left: 7%;
+  }
+}
+@media (max-width: 799px) {
+  svg {
+    width: 320px;
+    height: 541px;
+  }
+  .line1::before {
+    display: none;
+    content: '';
+    position: absolute;
+    top: 28.7%;
+    left: 72.5%;
+    width: 5px;
+    height: 21%;
+    background-color: #edcfc5;
+    transform: rotate(-13deg);
+  }
+  .line2::before {
+    display: none;
+    content: '';
+    position: absolute;
+    top: 14.5%;
+    left: 46.3%;
+    width: 5px;
+    height: 29%;
+    background-color: #edcfc5;
+    transform: rotate(90deg);
+  }
+  .svg-block-title {
+    display: none;
+    position: absolute;
+    top: 52.5%;
+    left: 7%;
+  }
+  .modal-content {
+    margin: auto;
+    padding: 20px;
+    max-width: 400px;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+  .content {
+    font-size: 14px;
+  }
+  .svg-block__modification {
+    flex-direction: column-reverse;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 999px) {
+  svg {
+    width: 481px;
+    height: 812px;
+  }
+  .line1::before {
+    content: '';
+    position: absolute;
+    top: 28.7%;
+    left: 72.5%;
+    width: 5px;
+    height: 21%;
+    background-color: #edcfc5;
+    transform: rotate(-13deg);
+  }
+  .line2::before {
+    content: '';
+    position: absolute;
+    top: 14.5%;
+    left: 46.3%;
+    width: 5px;
+    height: 29%;
+    background-color: #edcfc5;
+    transform: rotate(90deg);
+  }
+  .svg-block-title {
+    display: none;
+    position: absolute;
+    top: 27.5%;
+    left: 10%;
+  }
+  .modal-content {
+    margin: 40% auto;
+    padding: 20px;
+    max-width: 400px;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+  .content {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1399px) {
+  svg {
+    width: 481px;
+    height: 812px;
+  }
+  .line1::before {
+    content: '';
+    position: absolute;
+    top: 30.7%;
+    left: 70.5%;
+    width: 5px;
+    height: 21%;
+    background-color: #edcfc5;
+    transform: rotate(-35deg);
+  }
+  .line2::before {
+    content: '';
+    position: absolute;
+    top: 18.7%;
+    left: 41.6%;
+    width: 5px;
+    height: 28%;
+    background-color: #edcfc5;
+    transform: rotate(90deg);
+  }
+  .svg-block-title {
+    display: none;
+    position: absolute;
+    top: 31.5%;
+    left: 8%;
+  }
+}
+
+@media (min-width: 1400px) {
+  svg {
+    width: 962px;
+    height: 1624px;
+  }
+  .line1::before {
+    content: '';
+    position: absolute;
+    top: 30.7%;
+    left: 65%;
+    width: 5px;
+    height: 21%;
+    background-color: #edcfc5;
+    transform: rotate(-50deg);
+  }
+  .line2::before {
+    content: '';
+    position: absolute;
+    top: 20.5%;
+    left: 37.8%;
+    width: 5px;
+    height: 28%;
+    background-color: #edcfc5;
+    transform: rotate(90deg);
+  }
+  .svg-block-title {
+    display: none;
+    position: absolute;
+    top: 33.5%;
+    left: 12%;
+  }
+}
+.svg-human {
+  margin: auto;
 }
