--- a/src/css/factors.css
+++ b/src/css/factors.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  background-image: url('img/clover.png');
+  background-image: url('../img/clover.png');
   background-size: cover;
   top: 15%;
   left: 80%;
@@ -11,7 +11,7 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  background-image: url('img/clover2.png');
+  background-image: url('../img/clover2.png');
   background-size: cover;
   top: 25%;
   left: 10%;
@@ -20,7 +20,7 @@
   position: fixed;
   width: 400px;
   height: 400px;
-  background-image: url('img/clover3.png');
+  background-image: url('../img/clover3.png');
   background-size: cover;
   bottom: 0;
   right: 0;
