--- a/src/factors/css/factors.css
+++ b/src/factors/css/factors.css
@@ -78,13 +78,12 @@
   justify-content: center;
   align-items: center;
 }
+.svg-block-title {
+  color: #b4d21c;
+}
 .svg-block__modification {
   display: flex;
   position: relative;
-}
-.person-svg {
-  max-width: 820px;
-  max-height: 1100px;
 }
 .block-text {
   display: grid;
@@ -136,21 +135,54 @@
 /* Modal */
 .modal {
   display: none;
-  z-index: 9999;
-  margin: 20% auto;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  margin: 40% auto;
+  background-color: #fefefe;
+  margin: 10% auto;
   padding: 20px;
-  max-width: 600px;
-  overflow: hidden;
-  word-wrap: break-word;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
 }
+
+.pagination {
+  margin-top: 10px;
+}
+
+.pagination button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.pagination button:hover {
+  background-color: #45a049;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .content {
   font-size: 20px;
 }
@@ -168,47 +200,13 @@
   text-decoration: none;
   cursor: pointer;
 }
-@media (max-width: 380px) {
-  .svg-block-title {
-    display: none;
-    position: absolute;
-    top: 48% !important;
-    left: 7%;
-  }
-}
+
 @media (max-width: 799px) {
   svg {
     width: 320px;
     height: 541px;
   }
-  .line1::before {
-    display: none;
-    content: '';
-    position: absolute;
-    top: 28.7%;
-    left: 72.5%;
-    width: 5px;
-    height: 21%;
-    background-color: #edcfc5;
-    transform: rotate(-13deg);
-  }
-  .line2::before {
-    display: none;
-    content: '';
-    position: absolute;
-    top: 14.5%;
-    left: 46.3%;
-    width: 5px;
-    height: 29%;
-    background-color: #edcfc5;
-    transform: rotate(90deg);
-  }
-  .svg-block-title {
-    display: none;
-    position: absolute;
-    top: 52.5%;
-    left: 7%;
-  }
+
   .modal-content {
     margin: auto;
     padding: 20px;
@@ -229,32 +227,7 @@
     width: 481px;
     height: 812px;
   }
-  .line1::before {
-    content: '';
-    position: absolute;
-    top: 28.7%;
-    left: 72.5%;
-    width: 5px;
-    height: 21%;
-    background-color: #edcfc5;
-    transform: rotate(-13deg);
-  }
-  .line2::before {
-    content: '';
-    position: absolute;
-    top: 14.5%;
-    left: 46.3%;
-    width: 5px;
-    height: 29%;
-    background-color: #edcfc5;
-    transform: rotate(90deg);
-  }
-  .svg-block-title {
-    display: none;
-    position: absolute;
-    top: 27.5%;
-    left: 10%;
-  }
+
   .modal-content {
     margin: 40% auto;
     padding: 20px;
@@ -272,32 +245,6 @@
     width: 481px;
     height: 812px;
   }
-  .line1::before {
-    content: '';
-    position: absolute;
-    top: 30.7%;
-    left: 70.5%;
-    width: 5px;
-    height: 21%;
-    background-color: #edcfc5;
-    transform: rotate(-35deg);
-  }
-  .line2::before {
-    content: '';
-    position: absolute;
-    top: 18.7%;
-    left: 41.6%;
-    width: 5px;
-    height: 28%;
-    background-color: #edcfc5;
-    transform: rotate(90deg);
-  }
-  .svg-block-title {
-    display: none;
-    position: absolute;
-    top: 31.5%;
-    left: 8%;
-  }
 }
 
 @media (min-width: 1400px) {
@@ -305,33 +252,4 @@
     width: 962px;
     height: 1624px;
   }
-  .line1::before {
-    content: '';
-    position: absolute;
-    top: 30.7%;
-    left: 65%;
-    width: 5px;
-    height: 21%;
-    background-color: #edcfc5;
-    transform: rotate(-50deg);
-  }
-  .line2::before {
-    content: '';
-    position: absolute;
-    top: 20.5%;
-    left: 37.8%;
-    width: 5px;
-    height: 28%;
-    background-color: #edcfc5;
-    transform: rotate(90deg);
-  }
-  .svg-block-title {
-    display: none;
-    position: absolute;
-    top: 33.5%;
-    left: 12%;
-  }
-}
-.svg-human {
-  margin: auto;
 }
